Fixed img alignment and navbar when low device width

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 .nav {
-    max-width: 40em;
+    max-width: 40em; width: 80vw;
     background-color: var(--c2);
     padding: 1em;
     border-left: .1em solid var(--1);
@@ -63,9 +63,8 @@ p {
 }
 
 img {
-    min-height: 10px; max-height: 12em; height: 40vw;
-    padding: .2em;
-    margin: 2em;
+    max-height: 12em; height: 40vw;
+    margin: 1em; margin-left: auto; margin-right: auto;
     border-radius: 2em;
     transition-duration: .3s;
 }
